Components/Item/ItemPicker.razor.css
.item-list {
    grid-template-columns: repeat(auto-fit, 80px);
    width: calc((80px + 0.65rem) * 4);
    max-width: 100%;
    min-height: 185px;
    max-height: calc(95dvh - 140px);
}

.search-icon {
    user-select: none;
    -webkit-user-drag: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    z-index: 10;
}

#search-bar {
    padding-left: 2rem;
    padding-right: 2rem;
    max-width: 100%;
}

.btn-clear {
    z-index: 10;
    width: 1rem;
    height: 1.5rem;
}

